Fix alignment of images

--- a/src/components/random-gifs/RandomGifs.css
+++ b/src/components/random-gifs/RandomGifs.css
@@ -1,6 +1,5 @@
 .RandomGifs__container{
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
   width: 100%;
   margin-top: 30px;
@@ -8,7 +7,7 @@
 }
 
 .RandomGifs__img {
-  flex: 1 0 30%;
+  flex: 0 0 33%;
   height: 100px;
-  background-size: contain;
+  background-size: cover;
 }
